--- a/blocks/key-facts/key-facts.css
+++ b/blocks/key-facts/key-facts.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.key-facts-wrapper .key-facts {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
 .key-facts-wrapper .key-facts > div {
   display: flex;
   flex-wrap: wrap;
@@ -27,10 +32,6 @@
 .key-facts-wrapper .key-fact i.fa {
   font-size: 30px;
   margin-bottom: 8px;
-}
-
-.key-facts-wrapper .key-fact .icon {
-  margin-top: 8px;
 }
 
 .key-facts-wrapper .key-fact .icon,
@@ -111,6 +112,11 @@
 }
 
 @media screen and (min-width: 768px) {
+  .key-facts-wrapper .key-facts {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
   .key-facts-wrapper .key-facts.wide-columns .key-fact {
     flex: 1 0 30%;
   }
@@ -119,5 +125,15 @@
   .key-facts-wrapper .key-fact .icon svg {
     height: 72px;
     width: 72px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .key-facts-wrapper .key-facts {
+    gap: 80px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 80px;
+    padding-bottom: 80px;
   }
 }
