--- a/styles/styles.css
+++ b/styles/styles.css
@@ -756,7 +756,7 @@ div.block div.pager .pagination .scroll li a {
   }
 }
 
-main.blue-contract {
+main.blue-contract .section {
   padding: 40px 0;
 }
 
