--- a/blocks/bullet-points/bullet-points.css
+++ b/blocks/bullet-points/bullet-points.css
@@ -33,7 +33,7 @@
 }
 
 .bullet-points ul li {
-  border-bottom: 1px solid #e1dfdd;
+  border-bottom: 1px solid var(--c-grey-1);
   line-height: 1.3;
   font-size: 16px;
   font-weight: 600;
