--- a/blocks/calculator/calculator.css
+++ b/blocks/calculator/calculator.css
@@ -3,7 +3,7 @@ main .section .calculator-wrapper {
 }
 
 .calculator.block {
-  font-family: var(--heading-font-family);
+  font-family: var(--font-family-heading);
   background-color: var(--c-white);
   display: flex;
   flex-direction: column;
@@ -34,7 +34,7 @@ main .section .calculator-wrapper {
 }
 
 .disclaimer {
-  font-family: var(--body-font-family);
+  font-family: var(--font-family-body);
   font-size: var(--body-font-size-xxs);
   font-weight: 400;
   line-height: 16.5px;
@@ -45,7 +45,7 @@ main .section .calculator-wrapper {
 .calculator-inputs-title {
   font-size: var(--body-font-size-s);
   text-transform: uppercase;
-  color: var(--link-color);
+  color: var(--c-cta-blue-default);
   min-height: 50px;
   margin-top: 0;
 }
@@ -80,7 +80,7 @@ main .section .calculator-wrapper {
   font-size: var(--body-font-size-s);
   font-weight: 500;
   height: 52px;
-  border: 1px solid #4d4e53;
+  border: 1px solid var(--c-grey-4);
   border-radius: 0;
   width: 100%;
   padding: 10px 40px 10px 10px;
@@ -124,7 +124,7 @@ main .section .calculator-wrapper {
   color: var(--c-white);
   width: 75%;
   height: 52px;
-  background-color: var(--link-color);
+  background-color: var(--c-cta-blue-default);
   padding: 5px 10px;
   border: none;
   border-radius: 0.25rem;
@@ -148,7 +148,7 @@ main .section .calculator-wrapper {
 }
 
 .calculator-result-wrapper .percentage-wrapper{
-  font-family: var(--body-font-family);
+  font-family: var(--font-family-body);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -173,7 +173,7 @@ main .section .calculator-wrapper {
 
 .calculator-savings-table {
   text-align: center;
-  font-family: var(--body-font-family);
+  font-family: var(--font-family-body);
   width: 100%;
   padding: 0 15px;
   margin-bottom: 20px;
@@ -200,15 +200,15 @@ main .section .calculator-wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  font-family: var(--body-font-family);
+  font-family: var(--font-family-body);
   margin: 0 5vw;
 }
 
 .charts-selectors .selector {
   font-size: var(--body-font-size-xxs);
-  color: var(--link-color);
+  color: var(--c-cta-blue-default);
   border-radius: 20px;
-  border: 2px var(--link-color) solid;
+  border: 2px var(--c-cta-blue-default) solid;
   margin: 6px;
   padding: 8px 10px;
   cursor: pointer;
@@ -217,7 +217,7 @@ main .section .calculator-wrapper {
 .charts-selectors .selector:hover,
 .charts-selectors .selector[data-active="true"] {
   color: var(--c-white);
-  background-color: var(--link-color);
+  background-color: var(--c-cta-blue-default);
 }
 
 .charts-wrapper {
@@ -253,7 +253,7 @@ main .section .calculator-wrapper {
   margin: 10px 0 0;
   max-width: 100%;
   height: 100%;
-  font-family: var(--body-font-family);
+  font-family: var(--font-family-body);
   cursor: default;
   z-index: 0;
 }
@@ -291,7 +291,7 @@ main .section .calculator-wrapper {
 }
 
 .charts-wrapper .side-labels .line {
-  stroke: var(--volvo-text-black);
+  stroke: var(--c-black);
   opacity: 0.1;
 }
 
