--- a/common/modal/modal.css
+++ b/common/modal/modal.css
@@ -26,7 +26,7 @@
   position: relative;
   transform: translateY(-100vh);
   transition: transform 0.3s ease-out;
-  background-color: #e1dfdd;
+  background-color: var(--c-grey-1);
 }
 
 .modal-content .modal-video {
