--- a/styles/styles.css
+++ b/styles/styles.css
@@ -135,7 +135,7 @@
   --background-light-gray: #ebebeb;
   --highlight-background-color: #ccc;
   --btn-border-hover: #030333;
-  
+
   /* buttons */
   --btn-padding: 12px 32px;
 
@@ -895,5 +895,52 @@ main.blue-contract .section.section-with-title p {
 
   main.blue-contract .section.section-with-title > p:last-of-type {
     margin: 0 0 80px;
+  }
+}
+
+
+/* REDESIGN GLOBAL STYLES */
+html.redesign-v2 {
+  font-size: 16px;
+}
+
+html.redesign-v2 .section {
+  padding: 40px 0;
+}
+
+html.redesign-v2 .section > div {
+  padding: 0 16px;
+  margin: auto;
+}
+
+html.redesign-v2 .section div.full-width {
+  padding: 0;
+  width: 100%;
+}
+
+@media (min-width: 744px) {
+  html.redesign-v2 .section {
+    padding: 80px 0;
+  }
+
+  html.redesign-v2 .section > div {
+   padding: 0 32px;
+   margin: auto;
+  }
+}
+
+@media (min-width: 1440px) {
+  html.redesign-v2 .section > div {
+    padding: 0 135px;
+  }
+
+  html.redesign-v2 .section div.full-width {
+    margin: 0;
+  }
+}
+
+@media (min-width: 1440px) {
+  :root.redesign-v2 {
+    --wrapper-width: 1440px;
   }
 }
