--- a/styles/styles.css
+++ b/styles/styles.css
@@ -803,7 +803,7 @@ div.block div.pager .pagination .scroll li a {
     --sub-nav-height: 48px;
   }
 
-  main .section:first-child > :first-child {
+  :root:not(.redesign-v2) main .section:first-child > :first-child {
     margin-top: 30px;
   }
 
@@ -839,14 +839,14 @@ main.blue-contract .section > div {
 }
 
 @media (min-width: 1300px) {
-  :root {
+  :root:not(.html.redesign-v2) {
     --wrapper-width: 1200px;
   }
 }
 
 /* Sections variant styling */
 @media (min-width: 1440px) {
-  :root main.blue-contract {
+  :root:not(.html.redesign-v2) main.blue-contract {
     --wrapper-width: 1440px;
   }
 }
@@ -900,47 +900,45 @@ main.blue-contract .section.section-with-title p {
 
 
 /* REDESIGN GLOBAL STYLES */
-html.redesign-v2 {
+:root.redesign-v2 {
   font-size: 16px;
 }
 
-html.redesign-v2 .section {
-  padding: 40px 0;
+:root.redesign-v2 .section {
+  padding: 0;
 }
 
-html.redesign-v2 .section > div {
+:root.redesign-v2 .section > div {
   padding: 0 16px;
   margin: auto;
 }
 
-html.redesign-v2 .section div.full-width {
+:root.redesign-v2 .section div.full-width {
   padding: 0;
   width: 100%;
 }
 
 @media (min-width: 744px) {
-  html.redesign-v2 .section {
-    padding: 80px 0;
+  :root.redesign-v2 .section {
+    padding: 0;
   }
 
-  html.redesign-v2 .section > div {
+  :root.redesign-v2 .section > div {
    padding: 0 32px;
    margin: auto;
   }
 }
 
 @media (min-width: 1440px) {
-  html.redesign-v2 .section > div {
+  :root.redesign-v2 {
+    --wrapper-width: 1440px;
+  }
+
+  :root.redesign-v2 .section > div {
     padding: 0 135px;
   }
 
-  html.redesign-v2 .section div.full-width {
+  :root.redesign-v2 .section div.full-width {
     margin: 0;
-  }
-}
-
-@media (min-width: 1440px) {
-  :root.redesign-v2 {
-    --wrapper-width: 1440px;
   }
 }
