New block images grid

--- a/blocks/calculator/calculator.css
+++ b/blocks/calculator/calculator.css
@@ -291,7 +291,7 @@ main .section .calculator-wrapper {
 }
 
 .charts-wrapper .side-labels .line {
-  stroke: var(--c-black);
+  stroke: var(--text-color);
   opacity: 0.1;
 }
 
