--- a/blocks/images-grid/images-grid.css
+++ b/blocks/images-grid/images-grid.css
@@ -1,11 +1,10 @@
 :root {
   --images-grid-gutter: 12px;
-
   --images-grid-big-height: 274px;
   --images-grid-small-height: 204px;
 }
 
-.images-grid__items {
+.images-grid-items {
   display: flex;
   flex-flow: row nowrap;
   list-style: none;
@@ -15,7 +14,7 @@
   margin: 0;
 }
 
-.images-grid__item {
+.images-grid-item {
   background-color: var(--c-background-card);
   color: var(--text-color);
   flex: none;
@@ -25,82 +24,85 @@
   width: 90%;
 }
 
-.images-grid__item img {
+.images-grid-item img {
   height: var(--images-grid-big-height);
   object-fit: cover;
 }
 
-.images-grid__item:last-child {
+.images-grid-item:last-child {
   margin: 0;
 }
 
-.images-grid__title {
+.images-grid-title {
   font-family: var(--font-family-heading);
   font-size: 2.4rem;
   line-height: 125%;
   margin: 0;
 }
 
-.images-grid__itemText {
+.images-grid-itemtext {
   padding: 24px;
-
   font-family: var(--font-family-body);
   font-size: 1.6rem;
   line-height: 130%;
   letter-spacing: 0.5px;
 }
 
-.images-grid__itemText p {
+.images-grid-itemtext p {
   margin: 12px 0 0;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 744px) {
   :root {
     --images-grid-gutter: 16px;
   }
 
-  .images-grid__items {
+  .images-grid-items {
     display: grid;
     grid-template-columns: 50%;
-    grid-template-rows: 1.9fr 0.1fr 2fr;
     gap: var(--images-grid-gutter);
     grid-template-areas: 
       'area1 area2'
       'area1 area4'
-      'area3 area4';
+      'area3 area4'
+      'area5 area5';
     scroll-snap-type: none;
   }
 
-  .images-grid__item {
-    margin-bottom: 0;
-    width: auto;
+  .images-grid-item {
     margin: 0;
+    width: auto;
   }
 
-  .images-grid__item:nth-child(1) { grid-area: area1; }
-  .images-grid__item:nth-child(2) { grid-area: area2; }
-  .images-grid__item:nth-child(3) { grid-area: area3; }
-  .images-grid__item:nth-child(4) { grid-area: area4; }
+  .images-grid-item:nth-child(1) { grid-area: area1; }
+  .images-grid-item:nth-child(2) { grid-area: area2; }
+  .images-grid-item:nth-child(3) { grid-area: area3; }
+  .images-grid-item:nth-child(4) { grid-area: area4; }
+  .images-grid-item:nth-child(5) { grid-area: area5; }
 
-  .images-grid__item:nth-child(2) img, .images-grid__item:nth-child(3) img {
+  .images-grid-item:nth-child(2) img, .images-grid-item:nth-child(3) img {
     height: var(--images-grid-small-height);
   }
 
-  .images-grid__title {
+  /* Do not fix height to last element */
+  .images-grid-item:not(:nth-child(5)) img {
+    height: auto;
+  }
+
+  .images-grid-title {
     font-size: 3.2rem;
     letter-spacing: 0.25px;
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1440px) {
   :root {
     --images-grid-gutter: 24px;
-  
     --images-grid-big-height: 480px;
     --images-grid-small-height: 380px;
   }
 
-  .images-grid__itemText {
+  .images-grid-itemtext {
     padding: 40px 35px 32px;
   }
 }
