--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,4 +1,4 @@
-.footer-wrapper {
+q.footer-wrapper {
   margin: 48px auto 0;
   display: inline-block;
   width: 100%;
@@ -153,16 +153,20 @@
   color: var(--c-grey-2);
 }
 
-.block.footer .scroll-to-top {
+.v2-scroll-to-top {
   display: none;
   position: fixed;
   bottom: 20px;
   right: 30px;
   z-index: 99;
-  border: none;
-  background-color: var(--volvo-text-gray);
-  color: var(--c-white);
   cursor: pointer;
-  border-radius: 10px;
-  padding: 12px 24px;
+  padding: 10px;
+  border-radius: 300px;
+  border: 1px solid #D8D8D8;
+  background: var(--c-white);
+  box-shadow: 0px 4px 70px 0px rgba(0, 0, 0, 0.20);
+}
+
+.v2-scroll-to-top svg {
+  display: block;
 }
