fix linter issues

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -163,8 +163,8 @@ q.footer-wrapper {
   padding: 10px;
   border-radius: 300px;
   border: 1px solid #D8D8D8;
-  background: var(--c-white);
-  box-shadow: 0px 4px 70px 0px rgba(0, 0, 0, 0.20);
+  background-color: var(--c-white);
+  box-shadow: 0 4px 70px 0 rgb(0 0 0 / 20%);
 }
 
 .v2-scroll-to-top svg {
