--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -2,7 +2,8 @@
 
 @font-face {
   font-family: VolvoNovum;
-  src: url('/fonts/volvonovum-regular.woff') format('woff');
+  src: url('/fonts/VolvoNovum-Regular.woff2') format('woff2'),
+       url('/fonts/volvonovum-regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -10,7 +11,8 @@
 
 @font-face {
   font-family: VolvoNovum-Medium;
-  src: url('/fonts/VolvoNovum-Medium.woff') format('woff');
+  src: url('/fonts/VolvoNovum-Medium.woff2') format('woff2'),
+       url('/fonts/VolvoNovum-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -18,7 +20,8 @@
 
 @font-face {
   font-family: VolvoBroadProDigital;
-  src: url('/fonts/volvobroadprodigital.woff') format("woff");
+  src: url('/fonts/VolvoBroadProDigital.woff2') format('woff2'),
+       url('/fonts/volvobroadprodigital.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
