--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -162,17 +162,21 @@ q.footer-wrapper {
   cursor: pointer;
   padding: 10px;
   border-radius: 300px;
-  border: 1px solid #A9A9A9;
+  border: 1px solid var(--c-grey-400);
   background-color: var(--c-white);
   box-shadow: 0 4px 70px 0 rgb(0 0 0 / 20%);
 }
 
 .v2-scroll-to-top:hover {
-  background-color: #F7F7F7;
+  background-color: var(--c-grey-50);
 }
 
 .v2-scroll-to-top:active {
-  background-color: #EDEDED;
+  background-color: var(--c-grey-100);
+}
+
+.v2-scroll-to-top:focus {
+  outline: 2px solid var(--light-border-focus);
 }
 
 .v2-scroll-to-top svg {
