--- a/styles/styles.css
+++ b/styles/styles.css
@@ -121,7 +121,7 @@
   --c-grey-800: #424242;
   --c-grey-900: #323232;
   --c-grey-950: #212121;
-  --c-volvo-black: #141414;
+  --c-main-black: #141414;
 
   /* Success / error colors */
   --c-error-red: #C4001A;
