--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -154,17 +154,18 @@
 }
 
 .v2-scroll-to-top {
-  display: none;
-  position: fixed;
+  background-color: var(--c-white);
+  border-radius: 50%;
+  border: 1px solid var(--c-grey-400);
   bottom: 20px;
+  box-shadow: 0 4px 70px 0 rgb(0 0 0 / 20%);
+  color: var(--c-main-black);
+  cursor: pointer;
+  display: none;
+  padding: 10px;
+  position: fixed;
   right: 30px;
   z-index: 99;
-  cursor: pointer;
-  padding: 10px;
-  border-radius: 300px;
-  border: 1px solid var(--c-grey-400);
-  background-color: var(--c-white);
-  box-shadow: 0 4px 70px 0 rgb(0 0 0 / 20%);
 }
 
 .v2-scroll-to-top:hover {
